--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@ src="https://kit.fontawesome.com/ff0b4cb494.js" crossorigin="anonymous">
 
         <div id="footer-social-icons">
           <a href="">
-            <img src="./image/facebook (1).png" alt="facebook" />
+            <img src="facebook (1).png" alt="facebook" />
           </a>
           <a href="">
-            <img src="./image/twitter (1).png" alt="x" />
+            <img src="twitter (1).png" alt="x" />
           </a>
           <a href="">
-            <img src="./image/instagram.png" alt="instagram" />
+            <img src="instagram.png" alt="instagram" />
           </a>
           <button class="btn">Join Premium</button>
         </div>
